Modified token, cachine and cookies in backend for security pusposes